Revision history for Perl extension Search::Xapian.

1.2.25.0
	[Changes contributed by Olly Betts]
	- Fix long SEE ALSO lines by putting a newline after each comma in the
	  SEE ALSO lists, fixing warnings from man such as:
	  <standard input>:109: warning [p 1, 8.0i]: can't break line

1.2.24.0  Fri Sep 16 01:46:36 UTC 2016
	[Changes contributed by Nick Morrott]
	- Fix typo in POD documentation (fixes #730).
	[Changes contributed by Olly Betts]
	- Allow building against xapian-core 1.4.x as well as xapian-core
	  1.2.x.

1.2.23.0  Mon Mar 28 08:44:59 UTC 2016
	[Changes contributed by Olly Betts]
	- makehtmldocs: Fix inter-class links in generated HTML.
	- Fix typo in POD documentation.
	- Update Xapian website and trac links to use https, which is now
	  supported, thanks to James Aylett.

1.2.22.0  Tue Dec 29 06:05:40 UTC 2015
	[Changes contributed by Val Rosca, updated by Andreas Marienborg]
	- Wrap MatchSpy and ValueCountMatchSpy classes
	- Wrap Enquire's add_matchspy and clear_matchspies methods, keeping
	  track of references to Perl MatchSpy objects to avoid leaks.
	- t/facets.t
	[Changes contributed by Olly Betts]
	- Fix infinite loop trying to build with CPANPLUS (fixes #692, reported
	  by Andreas Vögele).
	- t/termgenerator.t: If a memory leak is detected, report how many
	  objects were allocated before and after the test.
	- Allow for "_gitN" tag on snapshots when checking for version
	  compatibility with xapian-core.
	- META.yml: Fix specified licence to be a valid name ('perl' instead of
	  'perl_5').

1.2.21.0  Wed May 20 14:34:41 UTC 2015
	[Changes contributed by Olly Betts]
	- Support passing collapse_max argument to Enquire::set_collapse_key().
	  Fixes #669, reported by Felix Ostmann.
	- Add missing 'my' to testcases.
	- Add 'use strict' to all testcases.
	- Add a "LICENSE" section to the main POD.
	- META.yml: Specify licence and minimum Perl version.
	- Fix t/symboltest.t to work when built against an installed version